--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -1,34 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+
   <title>Frontend Mentor | Social links profile</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <section id="info">
+    <img src="assets/images/avatar-jessica.jpeg" alt="image">
+    <h2 id="name">Jessica Randall</h2>
+    <p id="adress">London, United Kingdom</p>
+    <p id="bio">"Front-end developer and avid reader."</p>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
+    <a href="#" class="link">
+      <p class="linkText">GitHub</p>
+    </a>
+    <a href="#" class="link">
+      <p class="linkText">Frontend Mentor</p>
+    </a>
+    <a href="#" class="link">
+      <p class="linkText">LinkedIn</p>
+    </a>
+    <a href="#" class="link">
+      <p class="linkText">Twitter</p>
+    </a>
+    <a href="#" class="link">
+      <p class="linkText">Instagram</p>
+    </a>
+  </section>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Hugo Personelli</a>.
   </div>
 </body>
+
 </html>
