--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -17,24 +17,20 @@
       font-size: 11px;
       text-align: center;
     }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
   </style>
 </head>
 
 <body>
   <section id="info">
-    <img src="assets/images/avatar-jessica.jpeg" alt="image">
-    <h2 id="name">Jessica Randall</h2>
-    <p id="adress">London, United Kingdom</p>
-    <p id="bio">"Front-end developer and avid reader."</p>
+    <img src="assets/images/pdpjpg.jpg" alt="image">
+    <h2 id="name">Hugo Personelli</h2>
+    <p id="adress">Valence, France</p>
+    <p id="bio">"French student developer and rider"</p>
 
-    <a href="#" class="link">
+    <a href="https://github.com/Tch0p" class="link">
       <p class="linkText">GitHub</p>
     </a>
-    <a href="#" class="link">
+    <a href="https://www.frontendmentor.io/profile/Tch0p" class="link">
       <p class="linkText">Frontend Mentor</p>
     </a>
     <a href="#" class="link">
@@ -43,7 +39,7 @@
     <a href="#" class="link">
       <p class="linkText">Twitter</p>
     </a>
-    <a href="#" class="link">
+    <a href="https://www.instagram.com/hugo_prsnl/" class="link">
       <p class="linkText">Instagram</p>
     </a>
   </section>
